# api/docs/swagger.json
@@ -62,15 +62,21 @@
                         "schema": {
                           "type": "object",
                           "required": [
+                            "name",
                             "origin_url",
                             "parameter",
                             "title",
                             "url",
                             "domain",
                             "HTML",
-                            "isCrawling"
+                            "isCrawling",
+                            "referer"
                           ],
                           "properties": {
+                            "name": {
+                                "type": "string",
+                                "example": "TEST"
+                            },
                             "origin_url": {
                               "type": "string",
                               "example": "origin_url"
@@ -99,10 +105,10 @@
                               "parameter": "string",
                               "example": "['단어1', '단어2', '단어3', '단어4']"
                             },
-                            "isCrawling": {
-                              "parameter": "boolean",
-                              "example": true
-                            }
+                            "referer": {
+                                "parameter": "string",
+                                "example": "referer"
+                              }
                           }
                         }
                     }
@@ -138,6 +144,29 @@
         "/getLast10Data" : {
             "get" : {
                 "summary" : "GET /getLast10Data",
+                "responses" : {
+                    "200" : {
+                        "description" : "successful 200"
+                    },
+                    "404" : {
+                        "description" : "fall 404"
+                    }
+                }  
+            }
+        },
+        "/getUrl" : {
+            "get" : {
+                "summary" : "GET /getUrl",
+                "parameters" : [
+                    {
+                        "name" : "name",
+                        "in" : "query",
+                        "required" : true,
+                        "type" : "string",
+                        "description" : "고유 name 설정(중복 안됨)",
+                        "default": "TEST"
+                    }
+                ],
                 "responses" : {
                     "200" : {
                         "description" : "successful 200"
