# app.py
@@ -5,9 +5,14 @@ from db import HtmlFileManager
 from flask import abort
 from flask_swagger_ui import get_swaggerui_blueprint
 from flask_cors import cross_origin
-#cmd : export FLASK_DEBUG=1
-# flask run --port=8001 --host="0.0.0.0"
+from script.Scheduler import Scheduler
 import json
+
+# == run code ==
+# cmd : export FLASK_DEBUG=1
+# flask run --port=8001 --host="0.0.0.0"
+
+sch = Scheduler()
 PORT = 8001
 # PORT = 5000
 app = Flask(__name__)
@@ -30,17 +35,41 @@ def getIsCrawlingByUrl() :
     
     return jsonify(data), 200
 
-@app.route("/isCrawlingByTitle", methods=["GET"])
-def getIsCrawlingByTitle() :
+# @app.route("/isCrawlingByTitle", methods=["GET"])
+# def getIsCrawlingByTitle() :
+#     args_dict = request.args.to_dict()
+#     title : str = args_dict.get("title")
+    
+#     dbHtml = HtmlFileManager() # 싱글톤
+#     isCrawling : bool = dbHtml.getIsCrawlingUrl(title)
+#     data : dict = {"isCrawling" : isCrawling}
+#     # print( isCrawling )
+    
+#     return jsonify(data)
+
+@app.route("/getUrl", methods=["GET"])
+def getUrl():
     args_dict = request.args.to_dict()
-    title : str = args_dict.get("title")
+    name : str = args_dict.get("name")
+    if name == None or name == "" :
+        abort(404)
     
-    dbHtml = HtmlFileManager() # 싱글톤
-    isCrawling : bool = dbHtml.getIsCrawlingUrl(title)
-    data : dict = {"isCrawling" : isCrawling}
-    # print( isCrawling )
+    isSuccessful = sch.createUnit(name)
+    if isSuccessful == False :
+        1
+        # print("이미 있는 name")
+        # abort(404)
     
-    return jsonify(data)
+  
+    url = sch.getOnionUrl(name)
+    
+    result = {
+        "url" : url,
+        "Depth" : 3 
+    }
+    
+    return jsonify(result)
+
 
 
 @app.route("/postData", methods=["POST"])
@@ -48,6 +77,7 @@ def postData() :
     data = request.get_json()
 
     # JSON 데이터에서 필요한 값을 추출
+    name = data.get("name") # UnitId
     origin_url = data.get("origin_url")
     parameter = data.get("parameter")
     title = data.get("title")
@@ -55,32 +85,23 @@ def postData() :
     domain = data.get("domain")
     HTML = data.get("HTML")
     wordlist = data.get("wordlist")
-    isCrawling = data.get("isCrawling")
-    
-    # print(data)
+    referer = data.get("referer")
     
     try :
         wordlist = wordlist.strip("[]")
         wordlist = [word.strip(" '").strip(" \"") for word in wordlist.split(', ')]
     except :
-        print("에러")
-        abort(404)
-        
-    # print()
-    # print( wordlist )
-    # print( type(wordlist) )
-        
-
-    # isCrawling = True
+        print("wordlist가 잘못됨")
+        abort(404) 
+    
     if url == None :
+        print("url가 유효하지 않음")
         abort(404)
-    
-    dbHtml = HtmlFileManager()
-    
-    isSuccessful : bool = dbHtml.insertIntoTable(origin_url, parameter, title,
-                                        url, domain, HTML, wordlist, isCrawling)
-    
+                                          
+    isSuccessful = sch.postHtmlRow(name, origin_url, 
+                    parameter, title, url, domain, HTML, wordlist, referer)
     data : dict = {"isSuccessful" : isSuccessful}
+    
     if isSuccessful == False :
         return jsonify(data), 404
     
@@ -96,7 +117,17 @@ def getLast10Data() :
     
     return jsonify(data), 200
 
-
+@app.route("/getLast5000Data", methods=["Get"])
+def getLast5000Data() :
+    dbHtml = HtmlFileManager()
+    data : list = dbHtml.getLastAllSelect(5000)
+    
+    data = [[row[1],row[3],row[5],row[7], row[8], row[9]] for row in data]
+    
+    if data == None or len(data) == 0:
+        return abort(404)
+    
+    return jsonify(data), 200
 
 @app.route('/')
 def homepage():
